# invoice-comparison-mcp

./: .gitignore  LICENSE  PROMPTS_FRANCAIS.md  README.md  pyproject.toml
src/invoice_comparison/: __init__.py  comparison_engine.py  mcp_server.py  utils.py
src/invoice_comparison/database/: __init__.py  operations.py  schema.py
src/invoice_comparison/matching/: __init__.py  fuzzy_matcher.py  gtin_matcher.py  product_matcher.py  similarity_scorer.py
src/invoice_comparison/tools/: __init__.py  import_excel.py
tests/: __init__.py
