[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invoice-comparison-mcp"
version = "1.0.0"
description = "MCP server for comparing supplier invoices using AI"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Victor Gonzalez / Mhosaic", email = "victor@mhosaic.com"}
]
keywords = ["mcp", "claude", "invoice", "comparison", "supplier"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=0.9.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "sqlalchemy>=2.0.0",
    "rapidfuzz>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
invoice-comparison-server = "invoice_comparison.mcp_server:main"
invoice-comparison-import = "invoice_comparison.tools.import_excel:main"
invoice-comparison-merge = "invoice_comparison.tools.merge_databases:main"

[project.urls]
Homepage = "https://github.com/mhosaic-technologies/invoice-comparison-mcp"
Documentation = "https://github.com/mhosaic-technologies/invoice-comparison-mcp#readme"
Repository = "https://github.com/mhosaic-technologies/invoice-comparison-mcp"
Issues = "https://github.com/mhosaic-technologies/invoice-comparison-mcp/issues"

[tool.setuptools]
packages = {find = {where = ["src"]}}
package-dir = {"" = "src"}

[tool.setuptools.package-data]
invoice_comparison = ["data/*.db", "data/*.sql"]
